fixed youtube video player size

--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -1,8 +1,8 @@
 {% assign vid = include.id %}
-<div class="video">
+<div class="video-wide">
   <iframe
-    src="https://www.youtube-nocookie.com/embed/{{ vid }}?rel=0&modestbranding=1"
-    title="{{ include.title | default: 'YouTube video' }}"
+    src="https://www.youtube-nocookie.com/embed/bkTHjwxW17Y?rel=0&modestbranding=1"
+    title="Hey Rama Demo v1"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowfullscreen
