--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -1,7 +1,7 @@
 {% assign vid = include.id %}
 <div class="video-wide">
   <iframe
-    src="https://www.youtube-nocookie.com/embed/bkTHjwxW17Y?rel=0&modestbranding=1"
+    src="https://www.youtube-nocookie.com/embed/-Sa_ptuP4ps?rel=0&modestbranding=1"
     title="Hey Rama Demo v1"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
